redis-writer-service/redis-writer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-writer
  namespace: f1-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: redis-writer
  template:
    metadata:
      labels:
        app: redis-writer
    spec:
      containers:
        - name: redis-writer
          image: asia-south1-docker.pkg.dev/strat-project19/f1-repo/redis-writer:v10
          ports:
            - containerPort: 8001
